tests/expected_invalid_parse_missing_param_colon.diag.out
<input>:2:22: error: expected ':' after parameter name
    public fn main(value Int) -> Int {
                         ^^^
